--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
   <!-- AND ABOVE HERE -->
   <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="src/scripts/main.js"></script>
+  <script src="dist/scripts/main.js"></script>
   </body>
 </html>
